Add a cloud icon next to cloud tools
This satisfies the requirement that cloud tools should be styled differently from local tools.

(We considered putting the cloud icon before the text, but that causes alignment issues.)

--- a/css/style1.css
+++ b/css/style1.css
@@ -115,6 +115,11 @@ img.pic {
     float: left; /*explore what happens if this is 'right' instead*/
 }
 
+#tools-list li.cloud:after {
+  content: "☁";
+  color: lightgrey;
+}
+
 #style li a {
     display: block;
     color: white;
