Add box around the Tools Used section
This makes it look like the other sections.

We also changed the color of the cloud icons to make them stand out against the white background.

--- a/css/style1.css
+++ b/css/style1.css
@@ -115,9 +115,13 @@ img.pic {
     float: left; /*explore what happens if this is 'right' instead*/
 }
 
+#tools {
+  background-color: white;
+}
+
 #tools-list li.cloud:after {
   content: "☁";
-  color: lightgrey;
+  color: #9cf;
 }
 
 #style li a {
