--- a/css/style1.css
+++ b/css/style1.css
@@ -117,6 +117,12 @@ img.pic {
     border: 4px solid #000000;
 }
 
+/*
+ * Here are rules to style the new section of HTML.
+ *
+ * (Additionally, all of the rules under .section will apply to the new
+ * additions, since the additions use the .section class.)
+ */
 #tools {
     background-color: white;
 }
