Change Tools Used box background color
We changed the background color of the Tools Used box from white to the same shade of yellow used in the main title.

(Just to add more contrast.)

--- a/css/style1.css
+++ b/css/style1.css
@@ -124,7 +124,7 @@ img.pic {
  * additions, since the additions use the .section class.)
  */
 #tools {
-    background-color: white;
+    background-color: #FFDE7A;
 }
 
 #tools-list li.cloud:after {
