--- a/css/style2.css
+++ b/css/style2.css
@@ -9,14 +9,14 @@
 body {
     padding: 30px;
     background-color: #def;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: darkslategray;
 
     border: dotted darkslategray;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 h1 {
