--- a/css/style2.css
+++ b/css/style2.css
@@ -11,8 +11,11 @@ body {
     background-color: #def;
     font-family: 'Roboto', sans-serif;
     color: darkslategray;
-
     border: dotted darkslategray;
+}
+
+.section{
+  margin: 30px 10px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -21,4 +24,5 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   text-align: center;
+  padding-block-end: 10px;
 }
