Align and style faculty images
We aligned the images to be centered, and we gave the images a circular border.

--- a/css/style2.css
+++ b/css/style2.css
@@ -35,3 +35,20 @@ h1 {
 #courses ul {
     list-style: circle;
 }
+
+#faculty ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+  list-style: none;
+}
+
+.name, .office {
+  text-align: center;
+}
+
+img {
+  border-radius: 7%;
+}
