--- a/css/style2.css
+++ b/css/style2.css
@@ -12,7 +12,7 @@ html {
 
 body {
     margin: 30px;
-    padding-left: 30px;
+    padding: 0 30px;
     background-color: white;
     font-family: 'Roboto', sans-serif;
     color: darkslategray;
@@ -30,6 +30,10 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   text-align: center;
   padding-block-end: 10px;
+}
+
+h2 {
+  border-bottom: solid thin darkslategray;
 }
 
 #courses ul {
