Style the validation card
It should now look more like its own section.

--- a/css/style2.css
+++ b/css/style2.css
@@ -56,3 +56,20 @@ h2 {
 img {
   border-radius: 7%;
 }
+
+.tools-container {
+  border-bottom: solid thin darkslategray;
+}
+
+.tools-legend {
+  display: none;
+}
+
+.card {
+  margin: 30px 10px;
+}
+
+.card h6 {
+  font-size: 105%;
+  margin: 0.5em 0;
+}
