--- a/css/style2.css
+++ b/css/style2.css
@@ -19,6 +19,11 @@ body {
     border: dotted darkslategray;
 }
 
+a {
+  text-decoration: none;
+  color: #19a6a6;
+}
+
 .section{
   margin: 30px 10px;
 }
@@ -59,6 +64,15 @@ img {
 
 .tools-container {
   border-bottom: solid thin darkslategray;
+}
+
+#tools li {
+  margin: 0.2em 0;
+}
+
+#tools li.cloud:after {
+  color: #9cf;
+  content: " ☁";
 }
 
 .tools-legend {
